# Alexandria

./: BACKLOG.md  Makefile  README.md  alexandria-browse.py  alexandria-classify.py  alexandria-import.py  flatpak-notes  install-desktop.sh  make-app.sh  make-icns.sh  pdforg-browse.py  pdforg-classify.py  pdforg-import.py  pyproject.toml  python-deps.yaml  requirements-dev.txt  requirements.txt
alexandria/: author_works.py  bibtex_import.py  browse.py  classify.py  cli_import.py  csl_format.py  doi_import_dialog.py  extract.py  feed.py  identity.py  importer.py  index.py  markup.py  metrics.py  pdf_text.py  prefs.py  sidecar.py  thumbnail.py  watcher.py
alexandria_mcp/: models.py
data/: io.github.pemsley.Alexandria.icns  io.github.pemsley.Alexandria.metainfo.xml  pdforg.desktop
docs/design/: database-and-nfs.md
pdforg/: author_works.py  bibtex_import.py  browse.py  classify.py  cli_import.py  csl_export.py  discover.py  edit_dialog.py  extract.py  feed_window.py  identity.py  importer.py  index.py  metrics.py  pdb_mentions.py  prefs.py  references_pdf.py  sidecar.py  thumbnail.py  viewer.py  watcher.py
tests/: test_bibtex.py  test_br_from_metadata.py  test_crossref_throttle.py  test_import_toast.py  test_metrics_crossref.py  test_pdb_discover.py  test_pdb_mentions.py  test_resolve_doi.py
